expose brain input and output trace
